Jquery/error stuff working, fixed layout issue

--- a/src/app/components/project-links-body/project-links-body.component.html
+++ b/src/app/components/project-links-body/project-links-body.component.html
@@ -16,7 +16,7 @@
     <div class="col col-sm-4">
         <div class="card text-center">
             <div class="card-header">
-                <a routerLink="repos">
+                <a routerLink="commits">
                     <img src="https://raw.githubusercontent.com/swellaby/vsts-mirror-git-repository/master/images/extension-icon.png" alt="git_extension_mirror.png" height="100px">
                     <div class="image-description">Latest Commits</div>
                 </a>
@@ -29,7 +29,7 @@
     <div class="col col-sm-4">
         <div class="card text-center">
             <div class="card-header">
-                <a routerLink="repos">
+                <a routerLink="/about">
                     <img src="https://static.javatpoint.com/tutorial/git/images/git-push.png" alt="repos.png" height="100px">
                     <div class="image-description">Filler Content</div>
                 </a>
