--- a/src/app/components/repo-latest-commits/repo-latest-commits.component.html
+++ b/src/app/components/repo-latest-commits/repo-latest-commits.component.html
@@ -1,5 +1,5 @@
 <button class="btn btn-primary" (click)="getRepos()">hello</button>
-<span class="text-danger" *ngIf="isError">Sonething went wrong in request</span>
+<span class="text-danger" *ngIf="!isError">Something went wrong in request</span>
 <table class="table table-striped table-dark">
     <thead>
         <tr>
