--- a/src/app/components/repo-latest-commits/repo-latest-commits.component.html
+++ b/src/app/components/repo-latest-commits/repo-latest-commits.component.html
@@ -1,6 +1,6 @@
-<button class="btn btn-primary" (click)="getRepos()">hello</button>
+<button class="btn btn-primary" [disabled]="disableOnClick" (click)="disableMeOnClick(); fetchCommits()">hello</button>
 <span class="text-danger" *ngIf="!isError">Something went wrong in request</span>
-<table class="table table-striped table-dark">
+<!--<table class="table table-striped table-dark">
     <thead>
         <tr>
             <th scope="col">Repo</th>
@@ -18,4 +18,36 @@
             <th><a href="{{commit.url}}" target="_blank" class="text-primary">View in GitHub</a></th>
         </tr>
     </tbody>
-</table>
+</table> -->
+
+<div class="mat-elevation-z8">
+  <table mat-table [dataSource]="dataSource">
+
+    <ng-container matColumnDef="repo">
+      <th mat-header-cell *matHeaderCellDef> Repository Name </th>
+      <td mat-cell *matCellDef="let element"> {{element.repoName}} </td>
+    </ng-container>
+
+    
+    <ng-container matColumnDef="date">
+      <th mat-header-cell *matHeaderCellDef> Date </th>
+      <td mat-cell *matCellDef="let element"> {{element.date}} </td>
+    </ng-container>
+
+    
+    <ng-container matColumnDef="message">
+      <th mat-header-cell *matHeaderCellDef> Commit Message </th>
+      <td mat-cell *matCellDef="let element"> {{element.message}} </td>
+    </ng-container>
+
+    
+    <ng-container matColumnDef="url">
+      <th mat-header-cell *matHeaderCellDef> Link </th>
+      <td mat-cell *matCellDef="let element"> {{element.url}} </td>
+    </ng-container>
+
+    <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+    <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+  </table>
+  <mat-paginator [pageSizeOptions]="[5, 10]" showFirstLastButtons></mat-paginator>
+</div>
