--- a/src/app/components/commits-page/commits-page.component.html
+++ b/src/app/components/commits-page/commits-page.component.html
@@ -1,1 +1,1 @@
-<button class="btn btn-primary" id="uni">Click Me</button><span class="clicked"></span>
+<app-repo-latest-commits></app-repo-latest-commits>
