--- a/src/app/components/repo-latest-commits/repo-latest-commits.component.html
+++ b/src/app/components/repo-latest-commits/repo-latest-commits.component.html
@@ -1,4 +1,4 @@
-<button class="btn btn-primary" [disabled]="disableOnClick" (click)="disableMeOnClick(); fetchCommits()">hello</button>
+<!--<button class="btn btn-primary" [disabled]="disableOnClick" (click)="disableMeOnClick(); fetchCommits()">hello</button>-->
 <span class="text-danger" *ngIf="!isError">Something went wrong in request</span>
 <!--<table class="table table-striped table-dark">
     <thead>
@@ -20,30 +20,30 @@
     </tbody>
 </table> -->
 
-<div class="mat-elevation-z8">
+<div class="mat-elevation-z8" id="table-container">
   <table mat-table [dataSource]="dataSource">
 
     <ng-container matColumnDef="repo">
-      <th mat-header-cell *matHeaderCellDef> Repository Name </th>
+      <th class="header" mat-header-cell *matHeaderCellDef> Repository Name </th>
       <td mat-cell *matCellDef="let element"> {{element.repoName}} </td>
     </ng-container>
 
     
     <ng-container matColumnDef="date">
-      <th mat-header-cell *matHeaderCellDef> Date </th>
+      <th class="header" mat-header-cell *matHeaderCellDef> Date </th>
       <td mat-cell *matCellDef="let element"> {{element.date}} </td>
     </ng-container>
 
     
     <ng-container matColumnDef="message">
-      <th mat-header-cell *matHeaderCellDef> Commit Message </th>
+      <th class="header" mat-header-cell *matHeaderCellDef> Commit Message </th>
       <td mat-cell *matCellDef="let element"> {{element.message}} </td>
     </ng-container>
 
     
     <ng-container matColumnDef="url">
-      <th mat-header-cell *matHeaderCellDef> Link </th>
-      <td mat-cell *matCellDef="let element"> {{element.url}} </td>
+      <th class="header" mat-header-cell *matHeaderCellDef> Link </th>
+      <td mat-cell *matCellDef="let element"> <a href="{{element.url}}" class="url-link" target="_blank">View Commit</a> </td>
     </ng-container>
 
     <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
