small changes yesterday forgot them

--- a/src/app/components/about/about.component.css
+++ b/src/app/components/about/about.component.css
@@ -29,7 +29,7 @@ a.tip:hover span {
 }
 
 .about {
-    background-color:transparent; box-shadow: none; color:hotpink;
+    background-color:transparent; box-shadow: none; color:lightblue;
     font-weight: bold;
 }
 .lets-go {
