--- a/src/app/components/about/about.component.html
+++ b/src/app/components/about/about.component.html
@@ -8,10 +8,11 @@
 </div>
 
 <div class="jumbotron about">
-    <h2 class="display-4 text-center">{{title}}</h2>
+    <h2 class="display-2 text-center">{{title}}</h2>
 </div>
-<div class="row bio text-center" style="color:lightgreen;">
+<div class="row bio text-center" style="color:lightgray;">
     <div class="col col-md-8 offset-md-2">
+        <br>
         <p>
             Sam is currently as Associate Software Engineer at Charles Schwab, Inc. He works on the Statusticians team
             supporting the Schwab Advisor Center (SAC) with Schwab Technology Services (STS). His work on the team covers the 
