#8 completed navigation tab

--- a/src/app/components/navigate-tab/navigate-tab.component.html
+++ b/src/app/components/navigate-tab/navigate-tab.component.html
@@ -1,1 +1,85 @@
-<p>navigate-tab works!</p>
+<div class="jumbotron" style="background-color:transparent; box-shadow: none;">
+    <h2 class="display-4 text-center">I'm Looking For...</h2>
+</div>
+<div class="row text-center justify-content-center mx-auto" id="top">
+    <div class="col-sm-3 offset-sm-1">
+        <a routerLink="/about">
+            <div class="flip-card">
+                <div class="flip-card-inner">
+                  <div class="flip-card-front">
+                    The About Page
+                    <img src="https://icon-library.com/images/icon-about/icon-about-5.jpg" alt="about_icon.png" height="150px">
+    
+                  </div>
+                  <div class="flip-card-back">
+                    See background information of the author and links to social.
+                  </div>
+                </div>
+            </div>
+        </a>
+    </div>
+    <div class="col-sm-3">
+        <a routerLink="/home">
+            <div class="flip-card">
+                <div class="flip-card-inner">
+                  <div class="flip-card-front">
+                    Home Screen
+                    <img src="https://icon-library.com/images/home-icon-app/home-icon-app-11.jpg" alt="home_icon.jpg" height="150px">
+                  </div>
+                  <div class="flip-card-back">
+                    Start here to navigate the site.
+                  </div>
+                </div>
+            </div>
+        </a>
+    </div>
+    <div class="col-sm-3">
+        <a routerLink="/links/repos">
+            <div class="flip-card">
+                <div class="flip-card-inner">
+                  <div class="flip-card-front">
+                    View Repositories
+                    <img src="https://icon-library.com/images/icon-repository/icon-repository-6.jpg" alt="repo_icon.jpg" height="150px">
+                  </div>
+                  <div class="flip-card-back">
+                    Check out all the current repos.
+                  </div>
+                </div>
+            </div>
+        </a>
+    </div>
+</div>
+<div class="row justify-content-center mx-auto" id="bottom">
+    <div class="col-sm-3">
+        <a routerLink="/links/commits">
+            <div class="flip-card">
+                <div class="flip-card-inner">
+                  <div class="flip-card-front">
+                    View Commits
+                    <img src="https://icon-library.com/images/commit-icon/commit-icon-4.jpg" alt="commits_icon.jpg" height="150px">
+                  </div>
+                  <div class="flip-card-back">
+                    View all commits and see them in GitHub.
+                  </div>
+                </div>
+            </div>
+        </a>
+    </div>
+    <div class="col-sm-3">
+        <a routerLink="/links/register">
+            <div class="flip-card">
+                <div class="flip-card-inner">
+                  <div class="flip-card-front"> 
+                    Register Email
+                    <div>                
+                        <img src="https://icon-library.com/images/icon-repository/icon-repository-4.jpg" alt="random_icon.jpg" height="150px">
+                    </div>
+                  </div>
+                  <div class="flip-card-back">
+                    Register your email for site updates.
+                  </div>
+                </div>
+            </div>
+        </a>
+    </div>
+</div>
