--- a/src/app/components/project-links-body/project-links-body.component.html
+++ b/src/app/components/project-links-body/project-links-body.component.html
@@ -29,7 +29,7 @@
     <div class="col col-sm-4">
         <div class="card text-center">
             <div class="card-header">
-                <a routerLink="/about">
+                <a routerLink="register">
                     <img src="https://static.javatpoint.com/tutorial/git/images/git-push.png" alt="repos.png" height="100px">
                     <div class="image-description">Filler Content</div>
                 </a>
