--- a/src/app/components/about/about.component.html
+++ b/src/app/components/about/about.component.html
@@ -36,8 +36,8 @@
 </div>
 <div class="row">
     <div class="col col-sm-1 offset-sm-3">
-        <div class="card text-center" style="background-color: transparent;">
-            <div class="card-header">
+        <div class="card text-center" style="background-color: transparent; box-shadow: none;">
+            <div class="card-header" style="box-shadow: none;">
                 <a href="https://github.com/spaulsteinberg" target="_blank">
                     <img src="https://git-scm.com/images/logos/downloads/Git-Icon-Black.png" alt="github_logo.png" class="rounded mx-auto d-block" height="100px">
                 </a>
