close #14 adding wildcard and page not found with change

--- a/src/app/components/repo-page/repo-page.component.html
+++ b/src/app/components/repo-page/repo-page.component.html
@@ -10,7 +10,7 @@
                 {{repo.name}} <span *ngIf="repo.language != null">{{" - " + repo.language}}</span>
             </div>
             <div class="card-body">
-                {{repo.description}}
+                {{repo.description}} <span *ngIf="repo.description == null" class="text-danger">*No description provided</span>
             </div>
             <div class="card-footer">
                 <a href="{{repo.html_url}}" target="_blank"><button class="btn btn-info">View In GitHub</button></a>
