--- a/src/app/components/welcome-bar/welcome-bar.component.html
+++ b/src/app/components/welcome-bar/welcome-bar.component.html
@@ -2,3 +2,4 @@
     <h1 *ngIf="showWelcome" class="display-3 text-center animated fadeOutDown delay-3s">Welcome!</h1>
     <h1 *ngIf="!showWelcome" class="display-3 text-center animated fadeInUp delay-4s">{{headingCurrent}}</h1>
 </div>
+<app-home></app-home>
