--- a/src/app/components/page-not-found/page-not-found.component.html
+++ b/src/app/components/page-not-found/page-not-found.component.html
@@ -1,6 +1,6 @@
 <div class="row">
     <div class="col-sm-4 offset-sm-5">
         <div><h2 class="text-danger">Page Not found!</h2></div>
-        <div class="mx-4"><button class="btn btn-primary">Return Home</button></div>
+        <div class="mx-4"><a routerLink="/home"><button class="btn btn-primary">Return Home</button></a></div>
     </div>
 </div>
