need to add line chart now. close #12 duplicate of project link component

--- a/src/app/components/repo-details-page/repo-details-page.component.html
+++ b/src/app/components/repo-details-page/repo-details-page.component.html
@@ -12,6 +12,7 @@
 <ng-template #chartBlock>
     <div class="jumbotron" style="background-color:transparent; box-shadow: none;">
         <h2 class="display-4 text-center">{{repositoryName}} Repository</h2>
+        <h4 class="display-6 text-center"> Total Commits: {{repoCommitTotal}}</h4>
     </div>
     <div class="row">
         <div class="col col-lg-8 offset-lg-2">
