--- a/src/app/components/repo-details-page/repo-details-page.component.html
+++ b/src/app/components/repo-details-page/repo-details-page.component.html
@@ -20,7 +20,23 @@
                 <canvas baseChart
                             [data]="doughnutChartData"
                             [labels]="doughnutChartLabels"
-                            [chartType]="doughnutChartType">
+                            [chartType]="doughnutChartType"
+                            [options]="doughnutChartOptions">
+                </canvas>
+            </div>
+        </div>
+    </div>
+    <div class="row">
+        <div class="col col-lg-8 offset-lg-2">
+            <div style="display: block;">
+                <canvas baseChart width="400" height="400"
+                            [datasets]="lineChartData"
+                            [labels]="lineChartLabels"
+                            [options]="lineChartOptions"
+                            [colors]="lineChartColors"
+                            [legend]="lineChartLegend"
+                            [chartType]="lineChartType"
+                            [plugins]="lineChartPlugins">
                 </canvas>
             </div>
         </div>
