close #18 last week showing up

--- a/src/app/components/repo-details-page/repo-details-page.component.html
+++ b/src/app/components/repo-details-page/repo-details-page.component.html
@@ -13,6 +13,7 @@
     <div class="jumbotron" style="background-color:transparent; box-shadow: none;">
         <h2 class="display-4 text-center">{{repositoryName}} Repository</h2>
         <h4 class="display-6 text-center"> Total Commits: {{repoCommitTotal}}</h4>
+        <h4 class="display-6 text-center" *ngIf="mostRecentCommitWeek != undefined">Week of last commit: {{mostRecentCommitWeek}}</h4>
     </div>
     <div class="row">
         <div class="col col-lg-8 offset-lg-2">
@@ -41,19 +42,4 @@
             </div>
         </div>
     </div>
-    <!--<div class="row">
-        <div class="col col-lg-8 offset-lg-2">
-            <div>
-                <div style="display: block">
-                  <canvas baseChart
-                          [datasets]="barChartData"
-                          [labels]="barChartLabels"
-                          [options]="barChartOptions"
-                          [legend]="barChartLegend"
-                          [chartType]="barChartType">
-                  </canvas>
-                </div>
-              </div>
-        </div>
-    </div>-->
 </ng-template>
