close #9, #21, #24 all done with these

--- a/src/app/components/navigate-tab/navigate-tab.component.html
+++ b/src/app/components/navigate-tab/navigate-tab.component.html
@@ -8,7 +8,7 @@
                 <div class="flip-card-inner">
                   <div class="flip-card-front">
                     The About Page
-                    <img src="https://icon-library.com/images/icon-about/icon-about-5.jpg" alt="about_icon.png" height="150px">
+                    <img src="../../../assets/navigate-images/info-help.jpg" alt="about_icon.png" height="150px">
     
                   </div>
                   <div class="flip-card-back">
@@ -24,7 +24,7 @@
                 <div class="flip-card-inner">
                   <div class="flip-card-front">
                     Home Screen
-                    <img src="https://icon-library.com/images/home-icon-app/home-icon-app-11.jpg" alt="home_icon.jpg" height="150px">
+                    <img src="../../../assets/navigate-images/home.jpg" alt="home_icon.jpg" height="150px">
                   </div>
                   <div class="flip-card-back">
                     Start here to navigate the site.
@@ -39,7 +39,7 @@
                 <div class="flip-card-inner">
                   <div class="flip-card-front">
                     View Repositories
-                    <img src="https://icon-library.com/images/icon-repository/icon-repository-6.jpg" alt="repo_icon.jpg" height="150px">
+                    <img src="../../../assets/navigate-images/repo-file.jpg" alt="repo_icon.jpg" height="150px">
                   </div>
                   <div class="flip-card-back">
                     Check out all the current repos.
@@ -56,7 +56,7 @@
                 <div class="flip-card-inner">
                   <div class="flip-card-front">
                     View Commits
-                    <img src="https://icon-library.com/images/commit-icon/commit-icon-4.jpg" alt="commits_icon.jpg" height="150px">
+                    <img src="../../../assets/navigate-images/commit-icon.jpg" alt="commits_icon.jpg" height="150px">
                   </div>
                   <div class="flip-card-back">
                     View all commits and see them in GitHub.
@@ -72,7 +72,7 @@
                   <div class="flip-card-front"> 
                     Register Email
                     <div>                
-                        <img src="https://icon-library.com/images/icon-repository/icon-repository-4.jpg" alt="random_icon.jpg" height="150px">
+                        <img src="../../../assets/navigate-images/globe-icon.jpg" alt="random_icon.jpg" height="150px">
                     </div>
                   </div>
                   <div class="flip-card-back">
