--- a/src/app/components/project-links-body/project-links-body.component.html
+++ b/src/app/components/project-links-body/project-links-body.component.html
@@ -3,7 +3,7 @@
         <div class="card text-center">
             <div class="card-header">
                 <a routerLink="repos">
-                    <img src="https://banner2.cleanpng.com/20180716/tza/kisspng-github-computer-icons-clip-art-gits-5b4d20ab1f4131.145288281531781291128.jpg" alt="git_cat.jpg" height="100px">
+                    <img src="../../assets/project-links-images/gcat-2.jpg" alt="git_cat.jpg" height="100px">
                     <div class="image-description">Repositories</div>
                 </a>
                 
@@ -17,7 +17,7 @@
         <div class="card text-center">
             <div class="card-header">
                 <a routerLink="commits">
-                    <img src="https://raw.githubusercontent.com/swellaby/vsts-mirror-git-repository/master/images/extension-icon.png" alt="git_extension_mirror.png" height="100px">
+                    <img src="../../assets/project-links-images/git-extension.gif" alt="git_extension_mirror.png" height="100px">
                     <div class="image-description">Latest Commits</div>
                 </a>
             </div>
@@ -30,7 +30,7 @@
         <div class="card text-center">
             <div class="card-header">
                 <a routerLink="register">
-                    <img src="https://static.javatpoint.com/tutorial/git/images/git-push.png" alt="repos.png" height="100px">
+                    <img src="../../assets/project-links-images/repos.png" alt="repos.png" height="100px">
                     <div class="image-description">Filler Content</div>
                 </a>
             </div>
