--- a/src/app/components/project-links/project-links.component.html
+++ b/src/app/components/project-links/project-links.component.html
@@ -1,5 +1,5 @@
 <div class="jumbotron" style="background-color:transparent; box-shadow: none;">
-    <img src="https://git-scm.com/images/logos/downloads/Git-Icon-Black.png" alt="github_logo.png" class="rounded mx-auto d-block" height="100px">
+    <img src="../../assets/project-links-images/Git-Icon-Black.png" alt="github_logo.png" class="rounded mx-auto d-block" height="100px">
     <h2 class="display-4 text-center">GitHub Links</h2>
 </div>
 <app-project-links-body></app-project-links-body>
