--- a/src/app/components/repo-latest-commits/repo-latest-commits.component.html
+++ b/src/app/components/repo-latest-commits/repo-latest-commits.component.html
@@ -49,5 +49,5 @@
     <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
     <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
   </table>
-  <mat-paginator [pageSizeOptions]="[5, 10]" showFirstLastButtons></mat-paginator>
+  <mat-paginator [pageSizeOptions]="[10]" showFirstLastButtons></mat-paginator>
 </div>
