change to close #21 close #24

--- a/src/app/components/navigate-tab/navigate-tab.component.html
+++ b/src/app/components/navigate-tab/navigate-tab.component.html
@@ -70,7 +70,7 @@
             <div class="flip-card">
                 <div class="flip-card-inner">
                   <div class="flip-card-front"> 
-                    Register Email
+                    Register Email Page
                     <div>                
                         <img src="../../../assets/navigate-images/globe-icon.jpg" alt="random_icon.jpg" height="150px">
                     </div>
