changed out a few images

--- a/src/app/components/project-links-body/project-links-body.component.html
+++ b/src/app/components/project-links-body/project-links-body.component.html
@@ -3,7 +3,7 @@
         <div class="card text-center">
             <div class="card-header">
                 <a routerLink="repos">
-                    <img src="../../assets/project-links-images/gcat-2.jpg" alt="git_cat.jpg" height="100px">
+                    <img src="../../../assets/project-links-images/25231.svg" alt="git_cat.jpg" height="100px">
                     <div class="image-description">Repositories</div>
                 </a>
                 
