--- a/src/app/components/repo-page/repo-page.component.html
+++ b/src/app/components/repo-page/repo-page.component.html
@@ -1,5 +1,5 @@
 <div class="jumbotron" style="background-color:transparent; box-shadow: none;">
-    <img src="https://image.flaticon.com/icons/svg/25/25231.svg" alt="repo_pic.jpg" class="rounded mx-auto d-block" height="100px">
+    <img src="../../../assets/project-links-images/25231.svg" alt="repo_pic.jpg" class="rounded mx-auto d-block" height="100px">
     <h2 class="display-4 text-center">Repositories</h2>
 </div>
 
