close #23 close #6 done with these, starting contact page

--- a/src/app/components/project-links-body/project-links-body.component.html
+++ b/src/app/components/project-links-body/project-links-body.component.html
@@ -9,7 +9,7 @@
                 
             </div>
             <div class="card-body">
-                View Repositories and files within
+                View repositories and files within
             </div>
         </div>
     </div>
@@ -22,20 +22,20 @@
                 </a>
             </div>
             <div class="card-body">
-                View Latest Commits By <a href="https://github.com/spaulsteinberg" target="_blank">spaulsteinberg</a>
+                View latest commits by <a href="https://github.com/spaulsteinberg" target="_blank">spaulsteinberg</a>
             </div>
         </div>
     </div>
     <div class="col col-sm-4">
         <div class="card text-center">
             <div class="card-header">
-                <a routerLink="register">
+                <a routerLink="userinfo">
                     <img src="../../assets/project-links-images/repos.png" alt="repos.png" height="100px">
-                    <div class="image-description">Filler Content</div>
+                    <div class="image-description"> User Demography</div>
                 </a>
             </div>
             <div class="card-body">
-                filler content
+                See general GitHub repo information
             </div>
         </div>
     </div>
