--- a/src/app/components/welcome-bar/welcome-bar.component.html
+++ b/src/app/components/welcome-bar/welcome-bar.component.html
@@ -14,11 +14,11 @@
         <p>Austin, TX</p>
         <p>Charles Schwab, Inc.</p>
         <p>University of Tennessee Class of 2020</p>
-        <p>DC <img src="../../assets/plane.gif" alt="plane-emoji.jpg" height="15px" width="15px"> 
-           CA <img src="../../assets/plane.gif" alt="plane-emoji.jpg" height="15px" width="15px">
-           DC <img src="../../assets/plane.gif" alt="plane-emoji.jpg" height="15px" width="15px">
-           TN <img src="../../assets/plane.gif" alt="plane-emoji.jpg" height="15px" width="15px">
-           FL <img src="../../assets/plane.gif" alt="plane-emoji.jpg" height="15px" width="15px">
+        <p>DC <img src="../../../assets/home-images/plane.gif" alt="plane-emoji.jpg" height="15px" width="15px"> 
+           CA <img src="../../../assets/home-images/plane.gif" alt="plane-emoji.jpg" height="15px" width="15px">
+           DC <img src="../../../assets/home-images/plane.gif" alt="plane-emoji.jpg" height="15px" width="15px">
+           TN <img src="../../../assets/home-images/plane.gif" alt="plane-emoji.jpg" height="15px" width="15px">
+           FL <img src="../../../assets/home-images/plane.gif" alt="plane-emoji.jpg" height="15px" width="15px">
            TX 
         </p>
         <p>A collection of some of my work and interests. Public GitHub repos only, mainly from academia.
