--- a/src/app/components/email-register/email-register.component.html
+++ b/src/app/components/email-register/email-register.component.html
@@ -1,1 +1,19 @@
-<p>email-register works!</p>
+<div class="form-group">
+    <label>First Name</label>
+    <input type="text" class="form-control" required>
+</div>
+<div class="form-group">
+    <label>Last Name</label>
+    <input type="text" class="form-control" required>
+</div>
+<div class="form-group">
+    <label>Email</label>
+    <input type="email" class="form-control" required>
+</div>
+<div class="form-group">
+    <label>Phone</label>
+    <input type="tel" class="form-control">
+</div>
+<div class="submit-button">
+    <button class="btn btn-primary" type="submit">Submit</button>
+</div>
