made form model and close #25 issue fixed when adding mat style

--- a/src/app/components/email-register/email-register.component.html
+++ b/src/app/components/email-register/email-register.component.html
@@ -14,6 +14,6 @@
     <label>Phone</label>
     <input type="tel" class="form-control">
 </div>
-<div class="submit-button">
+<div class="submit-button"> <!-- remember to disable this if the form is invalid -->
     <button class="btn btn-primary" type="submit">Submit</button>
 </div>
