--- a/src/app/components/repo-latest-commits/repo-latest-commits.component.html
+++ b/src/app/components/repo-latest-commits/repo-latest-commits.component.html
@@ -46,8 +46,8 @@
       <td mat-cell *matCellDef="let element"> <a href="{{element.url}}" class="url-link" target="_blank">View Commit</a> </td>
     </ng-container>
 
-    <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
-    <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+    <tr mat-header-row *matHeaderRowDef="displayedColumns; sticky: true"></tr>
+    <tr mat-row *matRowDef="let row; columns: displayedColumns; sticky: true"></tr>
   </table>
-  <mat-paginator [pageSizeOptions]="[10]" showFirstLastButtons></mat-paginator>
+  <mat-paginator [pageSizeOptions]="[5, 10, 15]" showFirstLastButtons></mat-paginator>
 </div>
