1 year commits map being populated correctly

--- a/src/app/components/repo-latest-commits/repo-latest-commits.component.css
+++ b/src/app/components/repo-latest-commits/repo-latest-commits.component.css
@@ -8,6 +8,12 @@ table, .mat-paginator {
     color: violet;
     width: 15% !important; /* this keep headers from moving */
 }
+.header-url {
+    width: 10% !important;
+}
+.header-message {
+    width: 25% !important;
+}
 #table-container {
     padding-top: 5%;
 }
