--- a/src/app/components/repo-latest-commits/repo-latest-commits.component.html
+++ b/src/app/components/repo-latest-commits/repo-latest-commits.component.html
@@ -36,13 +36,13 @@
 
     
     <ng-container matColumnDef="message">
-      <th class="header" mat-header-cell *matHeaderCellDef> Commit Message </th>
+      <th class="header header-message" mat-header-cell *matHeaderCellDef> Commit Message </th>
       <td mat-cell *matCellDef="let element"> {{element.message}} </td>
     </ng-container>
 
     
     <ng-container matColumnDef="url">
-      <th class="header" mat-header-cell *matHeaderCellDef> Link </th>
+      <th class="header header-url" mat-header-cell *matHeaderCellDef> Link </th>
       <td mat-cell *matCellDef="let element"> <a href="{{element.url}}" class="url-link" target="_blank">View Commit</a> </td>
     </ng-container>
 
